#321:Ensure that when reading an mp4 box header, we have at least enough data in the file to actually read the header, if there is less data, ignore it and log a warning.
#322:Problems writing metadata for DSF files larger than 2GB
#329:Add support for Roon fields (and also SONGKONG_ID for SongKong)
#331:Rename ORIGINAL_ALBUM_YEAR to ORIGINALRELEASEDATE so recognized by Roon
#332:Add support for Roon LIVE field
#333:For ID3 rename PRODUCER, ARRANGER, ENGINEER, DJMIXER and MIXER to PRODUCER_INVOLVEDPEOPLE etc that will continue to write to TIPL/IPLS
#333:Add new PRODUCER, ARRANGER, ENGINEER, DJMIXER and MIXER fields and associated sort fields that map to TXXX for ID3
#334:Remove INVOLVEDPEOPLE mappings such as PRODUCER_INVOLVED PEOPLE and simplify logic
#335:When converting ID3v23 IPLS frame should convert to TIPL and/or TMCL frame but only if have data
#336:Add support for Roon ROONALBUMTAG and ROONTRACKTAG fields.
#337:Open MP4 channels in a try-with-resources block

2.2.5
#033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
#036:Added getNoSamples() to AudioHeader interface
#040:If ID3 frame marked as UTF-16 but has no BOM we now look to see if first byte contains data or not, if doesn't likely to be BE otherwise LE
#041:Fix equality checks for tags so based on contents not simple identity check
#061:Ensure if you try and set a field value to null an IllegalArgumentException will be thrown for all formats
#049:Mp4 now able to write file with udta atom plus unknown subatoms as well as meta atom
#077:Added support writing Aiff artwork
#078:Track length not being calculated in for Wav files
#079:Aiff Bitrate not calculated correctly
#481:Fixed handling of an empty FrameBodyTDAT frame preventing reading of valid TYER frame

2.2.4
Added support for reading/writing Aiff and Wav metadata
Now requires Java 1.7
Added support for deploying versions to bintray