@@ -130,6 +130,7 @@ Summarise Changes
 #335:When converting ID3v23 IPLS frame should convert to TIPL and/or TMCL frame but only if have data
 #336:Add support for Roon ROONALBUMTAG and ROONTRACKTAG fields.
 #337:Open MP4 channels in a try-with-resources block
+#340:Flac reader should check StreamInfo block is too small to read header details
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
